# vid_to_doc

./: .gitignore  LICENSE  README.md  env.example  pyproject.toml  refactor_plan.md  requirements-dev.txt  requirements.txt
config/: logging_config.py
src/vid_to_doc/: __init__.py  cli.py
src/vid_to_doc/core/: __init__.py  audio_extractor.py  doc_generator.py  summarizer.py  transcriber.py
src/vid_to_doc/models/: __init__.py  config.py  exceptions.py
src/vid_to_doc/services/: __init__.py  openai_service.py
src/vid_to_doc/utils/: __init__.py  audio_utils.py  file_utils.py  logging_utils.py  text_utils.py  youtube_utils.py
tests/: conftest.py
tests/integration/: README.md  conftest.py  test_cli.py  test_end_to_end.py  test_error_handling.py
tests/unit/: test_audio_extractor.py  test_audio_utils.py  test_doc_generator.py  test_file_utils.py  test_openai_service.py  test_summarizer.py  test_text_utils.py  test_transcriber.py
transcription/: .gitignore  README.md  main.py  requirements.txt  test_audio_extraction.py  test_openai_api.py
